--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Taren Moss] - WDD 230 - Web Frontend Development</title>
+    <title>Taren Moss - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="Course Assignment Portal | WDD 230 - Web Frontend Development | Taren Moss">
     <meta name="author" content="Taren Moss">
     <link rel="stylesheet" href="styles/base.css">
