--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Course Assignment Portal | WDD 230 - Web Frontend Development | Taren Moss">
     <meta name="author" content="Taren Moss">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
