--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taren Moss - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="Course Assignment Portal | WDD 230 - Web Frontend Development | Taren Moss">
     <meta name="author" content="Taren Moss">
+    <meta property="og:title" content="Taren Moss - WDD 230">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://res.cloudinary.com/luxuryp/images/w_1280,c_limit,f_auto,q_auto/gd0zjgp9jbkmi9aw8n8n/depositphotos_6100170_l">
+    <meta property="og:url" content="https://taren-moss.github.io/wdd230/">
+    <title>Taren Moss - WDD 230 - Web Frontend Development</title>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
 </head>
