Media Query functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Taren Moss - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
@@ -32,13 +33,13 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li>
-                    <a></a>
+                    <a href="lesson01/holygrail.html">[Lesson 1] Holy Grail Practice</a>
                 </li>
                 <li>
-                    <a></a>
+                    <a href="lesson02/design.html">[Lesson 2-1] Design Principles Practice</a>
                 </li>
                 <li>
-                    <a></a>
+                    <a href="lesson02/media-query.html">[Lesson 2-2] Media Queries Practice</a>
                 </li>
             </ul>
         </section>
