fixes and additions

--- a/index.html
+++ b/index.html
@@ -29,25 +29,27 @@
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
-        <section class="card">
-            <h3>Learning Activities</h3>
-            <ul>
-                <li>
-                    <a href="lesson01/holygrail.html">[Lesson 1] Holy Grail Practice</a>
-                </li>
-                <li>
-                    <a href="lesson02/design.html">[Lesson 2-1] Design Principles Practice</a>
-                </li>
-                <li>
-                    <a href="lesson02/media-query.html">[Lesson 2-2] Media Queries Practice</a>
-                </li>
-            </ul>
-        </section>
-        <section class="card">
-            <h3>Information</h3>
-            <p>Oregon Northwest</p> <!--Public repository the whole internet can technically see. Will make more specific only when needed-->
-            <p>[Weather Placeholder]</p>
-            <p>[Visit Count Placeholder]</p>
+        <section id="cardSpace">
+            <section class="card">
+                <h3>Learning Activities</h3>
+                <ul>
+                    <li>
+                        <a href="lesson01/holygrail.html">[Lesson 1] Holy Grail Practice</a>
+                    </li>
+                    <li>
+                        <a href="lesson02/design.html">[Lesson 2-1] Design Principles Practice</a>
+                    </li>
+                    <li>
+                        <a href="lesson02/media-query.html">[Lesson 2-2] Media Queries Practice</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="card">
+                <h3>Information</h3>
+                <p>Oregon Northwest</p> <!--Public repository the whole internet can technically see. Will make more specific only when needed-->
+                <p>[Weather Placeholder]</p>
+                <p>[Visit Count Placeholder]</p>
+            </section>
         </section>
     </main>
     <footer>
