--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
-        <section id="cardSpace">
+        <div id="cardSpace">
             <section class="card">
                 <h3>Learning Activities</h3>
                 <ul>
@@ -50,7 +50,7 @@
                 <p>[Weather Placeholder]</p>
                 <p>[Visit Count Placeholder]</p>
             </section>
-        </section>
+        </div>
     </main>
     <footer>
         <p>
