--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Design Principles Document">
-    <meta name="description" content="A document showcasing examples of Design Principles"
+    <meta name="description" content="A document showcasing examples of Design Principles">
     <meta name="author" content="Taren Moss">
     <title>Document</title>
     <link rel="stylesheet" href="styles/normalize.css">
