Another attempt to fix it

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Design Principles">
+    <meta property="og:title" content="Design Principles Document">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://taren-moss.github.io/wdd230/lesson2/design-principles.html">
     <meta name="description" content="A document showcasing examples of Design Principles">
     <meta name="author" content="Taren Moss">
     <title>Document</title>
