--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Design Principles">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://taren-moss.github.io/wdd230/lesson2/design-principles.html">
     <meta name="description" content="A document showcasing examples of Design Principles">
     <meta name="author" content="Taren Moss">
+    <meta property="og:title" content="Design Principles">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://res.cloudinary.com/luxuryp/images/w_1280,c_limit,f_auto,q_auto/gd0zjgp9jbkmi9aw8n8n/depositphotos_6100170_l">
+    <meta property="og:url" content="https://taren-moss.github.io/wdd230/lesson2/design-principles.html">
     <title>Document</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
