--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
                 <h3>Learning Activities</h3>
                 <ul>
                     <li>
-                        <a href="lesson01/holygrail.html">[Lesson 1] Holy Grail Practice</a>
+                        <a href="lesson01/holygrail.html">[W1 Lesson 1] Holy Grail Practice</a>
                     </li>
                     <li>
-                        <a href="lesson02/design.html">[Lesson 2-1] Design Principles Practice</a>
+                        <a href="lesson02/design.html">[W2 Lesson 1] Design Principles Practice</a>
                     </li>
                     <li>
-                        <a href="lesson02/media-query.html">[Lesson 2-2] Media Queries Practice</a>
+                        <a href="lesson02/media-query.html">[W2 Lesson 2] Media Queries Practice</a>
+                    </li>
+                    <li>
+                        <a href="lesson2/design-principles.html">[W2 Assignment] Design Principles Document</a>
                     </li>
                 </ul>
             </section>
