--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                     <li>
                         <a href="lesson2/design-principles.html" target="_blank">[W2 Assignment] Design Principles Document</a>
                     </li>
+                    <li>
+                        <a href="lesson03/css-combinators.html" target="_blank">[W3 Lesson 1] CSS Combinators</a>
+                    </li>
                 </ul>
             </section>
             <section class="card">
