--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                     <li>
                         <a href="lesson03/css-combinators.html" target="_blank">[W3 Lesson 1] CSS Combinators</a>
                     </li>
+                    <li>
+                        <a href="https://codepen.io/Rainbowcraft-2/pen/OJrZNoO" target="_blank">[W3 Lesson 2] Pseudo Elements CodePen</a>
+                    </li>
+                    <li>
+                        <a href="https://codepen.io/Rainbowcraft-2/pen/VwqxjYb" target="_blank">[W3 Lesson 3] Responsive Menu CodePen</a>
+                    </li>
                 </ul>
             </section>
             <section class="card">
