--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
         <h1>Taren Moss</h1>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="chamber/siteplan.html">Site Plan</a>
-        <a href="chamber/">Chamber</a>
-        <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
-        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/jacob/6?lang=eng&id=p12#p12" target="_blank">Scripture</a>
+        <a id="menu" href="#"></a>
+        <div class="navigation">
+            <a href="#" id="current">Home</a>
+            <a href="chamber/siteplan.html">Site Plan</a>
+            <a href="chamber/">Chamber</a>
+            <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/jacob/6?lang=eng&id=p12#p12" target="_blank">Scripture</a>
+        </div>
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
@@ -63,6 +66,7 @@
                 <p>[Visit Count Placeholder]</p>
             </section>
         </div>
+        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22097.798245413444!2d-123.81982715703492!3d46.18608545205935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1695863159934!5m2!1sen!2sus" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
         <p>
@@ -73,5 +77,6 @@
         <p id="lastModified"></p>
     </footer>
 <script src="scripts/getdates.js"></script>
+<script src="scripts/hamburger.js"></script>
 </body>
 </html>
