--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://res.cloudinary.com/luxuryp/images/w_1280,c_limit,f_auto,q_auto/gd0zjgp9jbkmi9aw8n8n/depositphotos_6100170_l">
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/lesson2/design-principles.html">
-    <title>Design Principles Document</title>
+    <title>Design Principles</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/base-larger.css">
