--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -44,7 +44,14 @@
         </section>
     </main>
     <footer>
-        <h3>©2023 Taren Moss</h3>
+        <footer>
+            <p>
+                ©2023<br>
+                Taren Moss
+            </p>
+            <p id="lastModified"></p>
+        </footer>
     </footer>
+<script src="scripts/getdates.js"></script>
 </body>
 </html>
