--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a id="menu" href="#"></a>
         <div class="navigation">
             <a href="#" id="current">Home</a>
-            <a href="chamber/siteplan.html">Site Plan</a>
+            <a href="lesson03/chamber-site-plan.html">Site Plan</a>
             <a href="chamber/">Chamber</a>
             <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/jacob/6?lang=eng&id=p12#p12" target="_blank">Scripture</a>
