--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/lesson03/chamber-site-plan.html">
     <title></title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="/styles/base.css">
+    <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="styles/site-plan.css">
     <link rel="stylesheet" href="styles/larger.css">
 </head>
@@ -22,7 +22,7 @@
     <nav>
         <a id="menu" href="#"></a>
         <div class="navigation">
-            <a href="/index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="#" id="current">Site Plan</a>
             <a href="chamber/">Chamber</a>
             <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
