Small Fix (Added site plan title)

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/lesson03/chamber-site-plan.html">
-    <title></title>
+    <title>Taren Moss - Chamber Site Plan</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="styles/site-plan.css">
