--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -98,11 +98,11 @@
             <div>
                 <div>
                     <h4>Bigger Screen</h4>
-                    <img src="images/chamber_wireframe_big.png" id="big-wire">
+                    <img src="images/chamber_wireframe_big.png" id="big-wire" alt="Wireframe for large screen">
                 </div>
                 <div>
                     <h4>Smaller Screen</h4>
-                    <img src="images/chamber_wireframe_small.png" id="small-wire">
+                    <img src="images/chamber_wireframe_small.png" id="small-wire" alt="Wireframe for small screen">
                 </div>
             </div>
         </section>
