--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -108,8 +108,14 @@
         </section>
     </main>
     <footer>
-
+        <p>
+            ©2023<br>
+            Taren Moss<br>
+            Oregon
+        </p>
+        <p id="lastModified"></p>
     </footer>
 <script src="scripts/hamburger.js"></script>
+<script src="scripts/getdates.js"></script>
 </body>
 </html>
