Updated index site

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <li>
                         <a href="https://codepen.io/Rainbowcraft-2/pen/VwqxjYb" target="_blank">[W3 Lesson 3] Responsive Menu CodePen</a>
                     </li>
+                    <li>
+                        <a href="lesson03/chamber-site-plan.html" target="_blank">[w3 Assignment]</a>
+                    </li>
                 </ul>
             </section>
             <section class="card">
