--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a href="https://codepen.io/Rainbowcraft-2/pen/VwqxjYb" target="_blank">[W3 Lesson 3] Responsive Menu CodePen</a>
                     </li>
                     <li>
-                        <a href="lesson03/chamber-site-plan.html" target="_blank">[w3 Assignment]</a>
+                        <a href="lesson03/chamber-site-plan.html" target="_blank">[w3 Assignment] Chamber Site Plan</a>
                     </li>
                 </ul>
             </section>
