Chamber Home Page

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                     <li>
                         <a href="lesson03/chamber-site-plan.html" target="_blank">[w3 Assignment] Chamber Site Plan</a>
                     </li>
+                    <li>
+                        <a href="https://codepen.io/Rainbowcraft-2/pen/OJroWGQ" target="_blank">[W4 Lesson 1] Pseudo Class CodePen</a>
+                    </li>
                 </ul>
             </section>
             <section class="card">
