--- a/test-site-sandbox/index.html
+++ b/test-site-sandbox/index.html
@@ -8,15 +8,9 @@
     <link rel="stylesheet" href="styles/styles.css">
     <title>Test Title</title>
     <body>
-        <ul>
-            <li>Unordered item</li>
-            <li>Unordered item
-                <ol>
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                </ol>
-            </li>
-        </ul>
+       <div class="gg">
+        Center Me
+       </div>
     </body>
 </html>
 <!--Just kind of messing around with tags, I think the preset (using !) is better-->
