--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="A simple site for making a list of top 10 Book of Mormon chapters. Made as part of the WDD230 course.">
     <meta name="author" content="Taren Moss">
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:image" content="">
-    <meta property="og:url" content="">
+    <meta property="og:title" content="Book of Mormon - Top 10">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://res.cloudinary.com/luxuryp/images/w_1280,c_limit,f_auto,q_auto/gd0zjgp9jbkmi9aw8n8n/depositphotos_6100170_l">
+    <meta property="og:url" content="https://taren-moss.github.io/wdd230/lesson05/bom.html">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="styles/bom.css">
