--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://res.cloudinary.com/luxuryp/images/w_1280,c_limit,f_auto,q_auto/gd0zjgp9jbkmi9aw8n8n/depositphotos_6100170_l">
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/lesson05/bom.html">
-    <title>Document</title>
+    <title>Book of Mormon - Top 10</title>
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="styles/bom.css">
 </head>
