--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,6 +35,12 @@
             <div class="nav-bottom">
             </div>
         </nav>
+        <div class="switchbox">
+            <label class="switch">
+                <input type="checkbox" id="theme-switch">
+                <span class="slider"></span>
+            </label>
+        </div>
     </header>
     <main>
         <div class="hero">
@@ -97,5 +103,6 @@
     </footer>
 <script src="scripts/hamburger.js"></script>
 <script src="scripts/getdates.js"></script>
+<script src="scripts/themetoggle.js"></script>
 </body>
 </html>
