--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/OregonCoastEcola_Edit.jpg/1920px-OregonCoastEcola_Edit.jpg">
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/chamber/index.html">
-    <title>Northest Oregon Chamber of Commerce</title>
+    <title>Northwest Oregon Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
