--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                     <li>
                         <a href="lesson05/bom.html" target="_blank">[W5 Lesson 1] Book of Mormon Top 10</a>
                     </li>
+                    <li>
+                        <a href="lesson06/images/landscape.webp" target="_blank">[W6 Lesson 1] Optimized Landscape Image</a>
+                    </li>
                 </ul>
             </section>
             <section class="card">
