--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     <li>
                         <a href="lesson06/images/landscape.webp" target="_blank">[W6 Lesson 1] Optimized Landscape Image</a>
                     </li>
+                    <li>
+                        <a href="lesson06/responsive-images.html" target="_blank">[W6 Lesson 2] Responsive Image</a>
+                    </li>
                 </ul>
             </section>
             <section class="card">
