--- a/lesson06/responsive-images.html
+++ b/lesson06/responsive-images.html
@@ -19,7 +19,7 @@
             <picture>
                 <source media="(max-width: 500px)" srcset="images/hero-small.webp">
                 <source media="(max-width: 1000px)" srcset="images/hero-medium.webp">
-                <img src="images/hero-large.webp" alt="hero image" width="1500px" height="750px">
+                <img src="images/hero-large.webp" alt="hero image" width="1500" height="750">
             </picture>
         </div>
     </main>
