--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Taren Moss">
     <meta property="og:title" content="Taren Moss - WDD 230">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/">
-    <meta property="og:url" content="https://taren-moss.github.io/wdd230/preview.jpg">
+    <meta property="og:image" content="images/preview.jpg">
+    <meta property="og:url" content="https://taren-moss.github.io/wdd230">
     <title>Taren Moss - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
