--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Taren Moss">
     <meta property="og:title" content="Northwest Oregon Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/OregonCoastEcola_Edit.jpg/1920px-OregonCoastEcola_Edit.jpg">
+    <meta property="og:image" content="https://taren-moss.github.io/wdd230/chamber/images/preview.jpg">
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/chamber/index.html">
     <title>Northwest Oregon Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
