--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                     <li>
                         <a href="lesson06/responsive-images.html" target="_blank">[W6 Lesson 2] Responsive Image</a>
                     </li>
+                    <li>
+                        <a href="lesson07/lazyload.html" target="_blank">[W7 Lesson 1] Lazy Loading</a>
+                    </li>
                 </ul>
             </section>
             <section class="card">
