--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <a href="lesson07/lazyload.html" target="_blank">[W7 Lesson 1] Lazy Loading</a>
                     </li>
                     <li>
-                        <a href="lesson07/lazyload.html" target="_blank">[W7 Lesson 2] Book of Mormon Top 10 v2</a>
+                        <a href="lesson07/bom.html" target="_blank">[W7 Lesson 2] Book of Mormon Top 10 v2</a>
                     </li>
                 </ul>
             </section>
