--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p>[Visit Count Placeholder]</p>
             </section>
         </div>
-        <iframe title="map" id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22097.798245413444!2d-123.81982715703492!3d46.18608545205935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1695863159934!5m2!1sen!2sus" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe title="map" id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22097.798245413444!2d-123.81982715703492!3d46.18608545205935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1695863159934!5m2!1sen!2sus" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
         <p>
