--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="images/me.webp" alt="a picture of me">
+        <img src="images/me.webp" alt="a picture of me" width="240" height="320">
         <h1>Taren Moss</h1>
     </header>
     <nav>
