--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </nav>
     <main>
         <div class="hero">
-            <p id="overlay">Portland Oregon Temple</p>
+            <h5 id="overlay">Portland Oregon Temple</h5>
             <picture>
                 <source media="(max-width: 400px)" srcset="images/temple-small.webp">
                 <source media="(max-width: 640px)" srcset="images/temple-medium.webp">
-                <img src="images/temple-large.webp" alt="hero image" width="960" height="540">
+                <img src="images/temple-large.webp" alt="Portland Oregon Temple" width="960" height="540">
             </picture>
         </div>
         <h2>WDD 230: Web Frontend Development</h2>
