--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Taren Moss</h1>
     </header>
     <nav>
-        <a id="menu" href="#"></a>
+        <button id="menu" aria-label="menu"></button>
         <div class="navigation">
             <a href="#" id="current">Home</a>
             <a href="lesson03/chamber-site-plan.html">Site Plan</a>
@@ -32,7 +32,7 @@
     </nav>
     <main>
         <div class="hero">
-            <h5 id="overlay">Portland Oregon Temple</h5>
+            <h2 id="overlay">Portland Oregon Temple</h2>
             <picture>
                 <source media="(max-width: 400px)" srcset="images/temple-small.webp">
                 <source media="(max-width: 640px)" srcset="images/temple-medium.webp">
