--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <main>
         <div class="hero">
-            <h2 id="overlay">Portland Oregon Temple</h2>
+            <p id="overlay">Portland Oregon Temple</p>
             <picture>
                 <source media="(max-width: 400px)" srcset="images/temple-small.webp">
                 <source media="(max-width: 640px)" srcset="images/temple-medium.webp">
