--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="nav-top">
                 <a href="#">Home</a>
-                <a href="#">Discover</a>
+                <a href="discover.html">Discover</a>
                 <a href="#">Directory</a>
                 <a href="#">Join</a>
             </div>
