--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,7 @@
             <a id="menu" href="#"></a>
             <div class="nav-small">
                 <a href="#">Home</a>
-                <a href="#">Discover</a>
+                <a href="discover.html">Discover</a>
                 <a href="#">Directory</a>
                 <a href="#">Join</a>
             </div>
