--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -27,7 +27,7 @@
                 <a href="#">Join</a>
             </div>
             <div class="nav-top">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#">Discover</a>
                 <a href="#">Directory</a>
                 <a href="#">Join</a>
