--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -43,7 +43,89 @@
         </div>
     </header>
     <main>
-
+        <div class="discover">
+            <div class="discover-info">
+                <h1 class="label">Information</h1>
+                <section class="card">
+                    <h3>Welcome</h3>
+                    <p id="greeting"></p>
+                </section>
+                <section class="card">
+                    <h3>About Us</h3>
+                    <p>The Northwest Oregon Chamber of Commerce is for learning and developing business skills and facilitating collaboration and shared growth between local businesses.</p>
+                </section>
+                <section class="card">
+                    <h3>Statistics</h3>
+                    <p>Members Joined: [number]</p>
+                    <p>Businesses Represented: [number]</p>
+                    <p>Events Hosted: [number]</p>
+                </section>
+                <section class="card">
+                    <h3>Helping Communities</h3>
+                    <p>[Insert commentary about the things the chamber has enabled in various communities in the area]</p>
+                </section>
+                <section class="card">
+                    <h3>Calendar</h3>
+                    <img id="calendar" src="images/dummy-calendar.webp" width="600" height="567">
+                </section>
+                <section class="card">
+                    <h3>Fitting Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur natus unde est laborum velit doloremque dignissimos ullam? Soluta nemo, error et consequatur molestias corporis porro esse, debitis numquam amet officia asperiores maiores dicta dolorum quibusdam doloribus possimus illo repellendus, facere nulla commodi ut odit. Sit dolores necessitatibus facilis quae mollitia.</p>
+                </section>
+            </div>
+            <div class="discover-images">
+                <h2 class="label">Locations</h2>
+                <section class="card">
+                    <h3>Haystack Rock</h3>
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="images/haystack-small.webp">
+                        <source media="(max-width: 900px)" srcset="images/haystack-medium.webp">
+                        <img src="images/haystack.webp" alt="Haystack Rock" width="1000" height="560" loading="lazy">
+                    </picture>
+                </section>
+                <section class="card">
+                    <h3>Astoria-Megler Bridge</h3>
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="images/megler-small.webp">
+                        <source media="(max-width: 900px)" srcset="images/megler-medium.webp">
+                        <img src="images/megler.webp" alt="Astoria Megler Bridge" width="1000" height="560" loading="lazy">
+                    </picture>
+                </section>
+                <section class="card">
+                    <h3>Tillamook Creamery</h3>
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="images/factory-small.webp">
+                        <source media="(max-width: 900px)" srcset="images/factory-medium.webp">
+                        <img src="images/factory.webp" alt="Tillamook Creamery" width="1000" height="560" loading="lazy">
+                    </picture>
+                </section>
+                <section class="card">
+                    <h3>Peter Iredale Wreckage</h3>
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="images/iredale-small.webp">
+                        <source media="(max-width: 900px)" srcset="images/iredale-medium.webp">
+                        <img src="images/iredale.webp" alt="Peter Iredale Wreckage" width="1000" height="560" loading="lazy">
+                    </picture>
+                </section>
+                <section class="card">
+                    <h3>Ecola State Park</h3>
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="images/ecola-small.webp">
+                        <source media="(max-width: 900px)" srcset="images/ecola-medium.webp">
+                        <img src="images/ecola.webp" alt="Ecola State Park" width="1000" height="560" loading="lazy">
+                    </picture>
+                </section>
+                <section class="card">
+                    <h3>Fort Stevens State Park (Battery Russell)</h3>
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="images/russell-small.webp">
+                        <source media="(max-width: 900px)" srcset="images/russell-medium.webp">
+                        <img src="images/russell.webp" alt="Battery Russel" width="1000" height="560" loading="lazy">
+                    </picture>
+                </section>
+                
+            </div>
+        </div>
     </main>
     <footer>
         <div id="logo">
@@ -57,6 +139,7 @@
     </footer>
 <script src="scripts/hamburger.js"></script>
 <script src="scripts/getdates.js"></script>
-<script src="scripts/themetoggle.js"></script>
+<script src="scripts/themetogglesubpage.js"></script>
+<script src="scripts/visitcode.js"></script>
 </body>
 </html>
