--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,9 +45,9 @@
     <main>
         <div class="hero">
             <picture>
-                <source media="(max-width: 600px)" srcset="images/wdd230-small.webp">
-                <source media="(max-width: 900px)" srcset="images/wdd230-medium.webp">
-                <img src="images/wdd230.webp" alt="Oregon Northwest Coast" width="1600" height="670">
+                <source media="(max-width: 600px)" srcset="images/coast-small.webp">
+                <source media="(max-width: 900px)" srcset="images/coast-medium.webp">
+                <img src="images/coast.webp" alt="Oregon Northwest Coast" width="1600" height="670">
             </picture>
             <h1>Northwest Oregon Chamber of Commerce</h1>
             <a href="#" id="call">Join the Chamber!</a>
@@ -114,7 +114,7 @@
     </footer>
 <script src="scripts/hamburger.js"></script>
 <script src="scripts/getdates.js"></script>
-<script src="scripts/themetoggle.js"></script>
+<script src="scripts/themetoggleindex.js"></script>
 <script src="scripts/windchill.js"></script>
 </body>
 </html>
