--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,7 +45,7 @@
     <main>
         <div class="discover">
             <div class="discover-info">
-                <h1 class="label">Information</h1>
+                <h1>Information</h1>
                 <section class="card">
                     <h3>Welcome</h3>
                     <p id="greeting"></p>
@@ -74,7 +74,7 @@
                 </section>
             </div>
             <div class="discover-images">
-                <h1 class="label">Locations</h1>
+                <h2 class="label">Locations</h2>
                 <section class="card">
                     <h3>Haystack Rock</h3>
                     <picture>
