--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -44,8 +44,9 @@
     </header>
     <main>
         <div class="discover">
+            <h1 id="discoverh1" class="label">Discover the Chamber!</h1>
             <div class="discover-info">
-                <h1>Information</h1>
+                <h2 class="label">Information</h2>
                 <section class="card">
                     <h3>Welcome</h3>
                     <p id="greeting"></p>
