--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -44,7 +44,7 @@
     </header>
     <main>
         <div class="discover">
-            <h1 id="discoverh1" class="label">Discover the Chamber!</h1>
+            <h1>Discover the Chamber!</h1>
             <div class="discover-info">
                 <h2 class="label">Information</h2>
                 <section class="card">
