--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -67,7 +67,7 @@
                 </section>
                 <section class="card">
                     <h3>Calendar</h3>
-                    <img id="calendar" src="images/dummy-calendar.webp" width="600" height="567">
+                    <img id="calendar" src="images/dummy-calendar.webp" alt="image of a calendar" width="600" height="567">
                 </section>
                 <section class="card">
                     <h3>Fitting Title</h3>
