--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -37,7 +37,7 @@
         </nav>
         <div class="switchbox">
             <label class="switch">
-                <input type="checkbox" id="theme-switch">
+                <input type="checkbox" id="theme-switch" aria-label="Dark/Light Theme Switch">
                 <span class="slider"></span>
             </label>
         </div>
