--- a/chamber/index.html
+++ b/chamber/index.html
@@ -104,7 +104,7 @@
     </main>
     <footer>
         <div id="logo">
-            <img src="images/logo.webp" alt="logo">
+            <img src="images/logo.webp" alt="logo" height="100" width="100">
         </div>
         <div class="footer-info">
             <h3>Taren D. Moss</h3>
