--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <nav>
-            <a id="menu" href="#"></a>
+            <a id="menu" href="#" aria-label="menu"></a>
             <div class="nav-small">
                 <a href="index.html">Home</a>
                 <a href="#">Discover</a>
