--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <nav>
-            <a id="menu" href="#"></a>
+            <a id="menu" href="#" aria-label="menu"></a>
             <div class="nav-small">
                 <a href="#">Home</a>
                 <a href="discover.html">Discover</a>
