Home Page Update

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                     <li>
                         <a href="lesson07/bom.html" target="_blank">[W7 Lesson 2] Book of Mormon Top 10 v2</a>
                     </li>
+                    <li>
+                        <a href="lesson08/tablebuild.html" target="_blank">[W8 Lesson 1] HTML Tables</a>
+                    </li>
                 </ul>
             </section>
             <section class="card">
