--- a/form-start/index.html
+++ b/form-start/index.html
@@ -12,6 +12,7 @@
     <link href="styles/normalize.css" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/larger.css" rel="stylesheet">
+    <link rel="icon" href="../favicon.ico">
 </head>
 
 <body>
