Home Page Update

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                     <li>
                         <a href="lesson08/tablebuild.html" target="_blank">[W8 Lesson 1] HTML Tables</a>
                     </li>
+                    <li>
+                        <a href="form-start/index.html" target="_blank">[W8 Lesson 2] HTML Forms</a>
+                    </li>
                 </ul>
             </section>
             <section class="card">
