--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                     <li>
                         <a href="form-start/index.html" target="_blank">[W8 Lesson 2] HTML Forms</a>
                     </li>
+                    <li>
+                        <a href="form.html" target="_blank">[W8 Assignment] Form</a>
+                    </li>
                 </ul>
             </section>
             <section class="card">
