--- a/test-site-sandbox/index.html
+++ b/test-site-sandbox/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <title>Test Title</title>
     <body>
-       <div class="gg">
-        Center Me
-       </div>
+        <input type="text" name="code-mark" pattern="(?=.*\d)(?=.*?[~!@#$%^&*;:,.])(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9]).{8,}" title="The Code Mark">
     </body>
 </html>
 <!--Just kind of messing around with tags, I think the preset (using !) is better-->
