--- a/form.html
+++ b/form.html
@@ -12,6 +12,7 @@
     <title>Form Assignment</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/form.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
