--- a/record.html
+++ b/record.html
@@ -12,6 +12,7 @@
     <title>Form Confirmation</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/form.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
@@ -26,8 +27,6 @@
             <p id="lastModified"></p>
         </footer>
     </footer>
-<script src="scripts/password.js"></script>
-<script src="scripts/rangeslider.js"></script>
 <script src="scripts/getdates.js"></script>
 </body>
 </html>
