--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <a href="form-start/index.html" target="_blank">[W8 Lesson 2] HTML Forms</a>
                     </li>
                     <li>
-                        <a href="form.html" target="_blank">[W8 Assignment] Form</a>
+                        <a href="form.html" target="_blank">[W8 Assignment] Form Assignment</a>
                     </li>
                 </ul>
             </section>
