Chamber Join Page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,13 +24,13 @@
                 <a href="index.html">Home</a>
                 <a href="#">Discover</a>
                 <a href="#">Directory</a>
-                <a href="#">Join</a>
+                <a href="join.html">Join</a>
             </div>
             <div class="nav-top">
                 <a href="index.html">Home</a>
                 <a href="#">Discover</a>
                 <a href="#">Directory</a>
-                <a href="#">Join</a>
+                <a href="join.html">Join</a>
             </div>
             <div class="nav-bottom">
             </div>
