--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,13 +24,13 @@
                 <a href="#">Home</a>
                 <a href="discover.html">Discover</a>
                 <a href="#">Directory</a>
-                <a href="#">Join</a>
+                <a href="join.html">Join</a>
             </div>
             <div class="nav-top">
                 <a href="#">Home</a>
                 <a href="discover.html">Discover</a>
                 <a href="#">Directory</a>
-                <a href="#">Join</a>
+                <a href="join.html">Join</a>
             </div>
             <div class="nav-bottom">
             </div>
