--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The Northwest Oregon Chamber of Commerce is for learning and developing business skills and facilitating collaboration and shared growth between local businesses.">
+    <meta name="description" content="You just joined the Northwest Oregon Chamber of Commerce">
     <meta name="author" content="Taren Moss">
-    <meta property="og:title" content="Northwest Oregon Chamber of Commerce">
+    <meta property="og:title" content="Thank You for Joining the Northwest Oregon Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://taren-moss.github.io/wdd230/chamber/images/preview.jpg">
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/chamber/index.html">
-    <title>Northwest Oregon Chamber of Commerce</title>
+    <title>Thank You for Joining the Northwest Oregon Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -46,7 +46,7 @@
         <div class="thanks">
             <section id="thanks-message">
                 <h1>Welcome to the Chamber!</h1>
-                <h2>Your form has been sent.</h2>
+                <h2>Your form has been sent. Thank you!</h2>
             </section>
         </div>
     </main>
