--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The Northwest Oregon Chamber of Commerce is for learning and developing business skills and facilitating collaboration and shared growth between local businesses.">
+    <meta name="description" content="Join the Northwest Oregon Chamber of Commerce. The Northwest Oregon Chamber of Commerce is for learning and developing business skills and facilitating collaboration and shared growth between local businesses.">
     <meta name="author" content="Taren Moss">
-    <meta property="og:title" content="Northwest Oregon Chamber of Commerce">
+    <meta property="og:title" content="Join the Northwest Oregon Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://taren-moss.github.io/wdd230/chamber/images/preview.jpg">
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/chamber/index.html">
-    <title>Northwest Oregon Chamber of Commerce</title>
+    <title>Join the Northwest Oregon Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
