--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
                     <li>
                         <a href="form.html" target="_blank">[W8 Assignment] Form Assignment</a>
                     </li>
+                    <li>
+                        <a href="lesson09/new-ward-members.json" target="_blank">[W9 Lesson 1] New Ward Members JSON</a>
+                    </li>
+                    <li>
+                        <a href="lesson09/prophets.html" target="_blank">[W9 Lesson 2] Prophets Fetch API</a>
+                    </li>
                 </ul>
             </section>
             <section class="card">
